tests/ui/task_payload_non_string_task_type.rs
use asynqrs::TaskPayload;
use serde::{Deserialize, Serialize};

#[derive(Debug, PartialEq, Eq, Serialize, Deserialize, TaskPayload)]
#[task_type = 42]
struct NonStringTaskType {
    user_id: u64,
}

fn main() {}
